# Sierpinski_triangle

./: .gitignore  README.md  pyproject.toml  sierpinski triangle.py  sierpinski_triangle.py
